# PlainTextToGCal

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: app.js
templates/: home.html
