[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
google-api-python-client = "^2.86.0"
google-auth-oauthlib = "^1.0.0"
xds-protos = "^0.0.11"
Flask-Cors = "^3.0.10"
Flask-Session = "^0.5.0"
dateparser = "^1.1.8"
spacy = "^3.5.3"
en-ud-model-sm = "1.1.0"
datefinder = "^0.7.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"